# djangorestframework-keycloak

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  README.rst  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  labeler.yml
drf_keycloak/: api.py  authentication.py  exceptions.py  keys.py  middleware.py  permissions.py  schema.py  settings.py  token.py
test_project/: Dockerfile  Makefile  README.md  apps.py  docker-compose.test.yml  manage.py  settings.py  urls.py
test_project/scripts/: setup-keycloak.sh  test-integration.py  test-keycloak-api.py
tests/: conftest.py  helpers.py  test_api.py  test_authentication.py  test_keys.py  test_middleware.py  test_permissions.py  test_schema.py  test_settings.py  test_token.py
