[build-system]
requires = ["setuptools>=75.8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-keycloak"
version = "1.0.2"
description = "Keycloak authentication plugin for Django REST Framework"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Sascha Rau", email = "ideal3000developer@gmail.com"},
]
dependencies = [
    "requests>=2.26.0",
    "django>=3.2",
    "djangorestframework>=3.10",
    "pyjwt>=2,<3",
    "cryptography>=3.3.1"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/sascharau/djangorestframework-keycloak"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "drf-spectacular",
    "tox",
]
lint = [
    "flake8",
    "pep8",
    "isort",
]
doc = [
    "Sphinx>=1.6.5,<2",
    "sphinx_rtd_theme>=0.1.9",
]
dev = [
    "pytest-watch",
    "wheel",
    "twine",
    "ipython",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "drf-spectacular",
    "tox",
    "flake8",
    "pep8",
    "isort",
    "Sphinx>=1.6.5,<2",
    "sphinx_rtd_theme>=0.1.9",
    "python-jose==3.3.0"
]
python-jose = [
    "python-jose==3.3.0"
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "test_project", "test_project.*", "venv", "venv.*", "dist", "dist.*", "build", "build.*"]
